Fix logo spacing in nav

--- a/source/stylesheets/_global-nav.scss
+++ b/source/stylesheets/_global-nav.scss
@@ -20,7 +20,7 @@
   float: left;
   font-size: $h5-font-size;
   font-weight: $font-weight-bold;
-  margin-top: 0.5em;
+  margin-top: 0.3em;
 }
 
 .global-nav-list {
